--- a/tsconfig.json
+++ b/tsconfig.json
@@ -5,6 +5,9 @@
     "moduleResolution": "NodeNext",
     "esModuleInterop": true,
     "outDir": "./build",
+    "declaration": true,
+    "declarationMap": true,
+    "sourceMap": true,
     "strict": true,
     "skipLibCheck": true,
     "forceConsistentCasingInFileNames": true,
